--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,6 +62,8 @@ jobs:
       - run:
           name : "run integration tests"
           command : |
+            go build 
+            ./circleci/integration_tests.sh
             
 
 
