added test reporter

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,7 @@ jobs:
           name : "Push results to code coverage (master only)"
           command : |
             if [[ "$CIRCLE_BRANCH" == "master" ]]; then
-              export CC_TEST_REPORTER_ID=
+              export CC_TEST_REPORTER_ID=99f460f9ae9925e21a7087b218f317c133406bbb278b2980e6441cdebc79ec01
               curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
               chmod +x ./cc-test-reporter
               ./cc-test-reporter format-coverage ./coverage.out -t gocov
