--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,7 +62,7 @@ jobs:
       - run:
           name : "run integration tests"
           command : |
-            cp build/reverse-proxy reverse-proxy
+            go build -o reverse-proxy
             .circleci/integration_tests.sh
             
 
