--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@
 defaults: &defaults
   docker:
     - image: circleci/golang:1.12
-  working_directory: /go/src/github.com/dgoldstein1/custom-reverse-proxy
+  working_directory: /go/src/github.com/dgoldstein1/reverse-proxy
   environment:
     GO111MODULE: "on"
 
@@ -20,7 +20,7 @@ jobs:
       - checkout
       - attach_workspace:
           at: .
-      - run: go build -o build/custom-reverse-proxy
+      - run: go build -o build/reverse-proxy
 
 
   #############
@@ -44,7 +44,7 @@ jobs:
           name : "Push results to code coverage (master only)"
           command : |
             if [[ "$CIRCLE_BRANCH" == "master" ]]; then
-              export CC_TEST_REPORTER_ID=
+              export CC_TEST_REPORTER_ID=99f460f9ae9925e21a7087b218f317c133406bbb278b2980e6441cdebc79ec01
               curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
               chmod +x ./cc-test-reporter
               ./cc-test-reporter format-coverage ./coverage.out -t gocov
@@ -62,7 +62,9 @@ jobs:
       - run:
           name : "run integration tests"
           command : |
-            echo "TODO"
+            go build -o reverse-proxy
+            .circleci/integration_tests.sh
+            
 
 
   ############################
@@ -80,9 +82,9 @@ jobs:
           command : |
               export $(cat VERSION | xargs)
               docker login -u ${DOCKER_USER} -p ${DOCKER_PASS}
-              docker build . -t dgoldstein1/custom-reverse-proxy:$VERSION -t dgoldstein1/custom-reverse-proxy:latest
-              docker push dgoldstein1/custom-reverse-proxy:$VERSION
-              docker push dgoldstein1/custom-reverse-proxy:latest
+              docker build . -t dgoldstein1/reverse-proxy:$VERSION -t dgoldstein1/reverse-proxy:latest
+              docker push dgoldstein1/reverse-proxy:$VERSION
+              docker push dgoldstein1/reverse-proxy:latest
 
   # publish github release with binary
   publish-github-release:
@@ -97,7 +99,7 @@ jobs:
           name: "Publish Release on GitHub"
           command: |
             export $(cat VERSION | xargs)
-            ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -delete ${VERSION} ./build/custom-reverse-proxy
+            ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -delete ${VERSION} ./build/reverse-proxy
 
 
 workflows:
