added heroku stuff

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,6 +91,22 @@ jobs:
               docker push dgoldstein1/reverse-proxy:$VERSION
               docker push dgoldstein1/reverse-proxy:latest
 
+              docker login --username=$EMAIL --password=$HEROKU_API_KEY registry.heroku.com
+              docker tag dgoldstein1/reverse-proxy:$VERSION registry.heroku.com/$HEROKU_APP_NAME/web
+              docker push registry.heroku.com/$HEROKU_APP_NAME/web
+
+  # publish github release with binary
+  heroku:
+    docker:
+      - image: circleci/heroku@1.0.0
+    steps:
+      - run:
+          name: "deploy"
+          command: |
+              heroku login
+              heroku container:release web --app $HEROKU_APP_NAME
+
+
   # publish github release with binary
   publish-github-release:
     docker:
@@ -128,6 +144,14 @@ workflows:
           filters:
             branches:
               only: master
+
+      - heroku:
+          requires:
+            - push-docker-image
+          filters:
+            branches:
+              only: master
+
 
       - publish-github-release:
           requires:
